# dcpu-asm

./: configure.ac
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  dcpu  dcpu.c  dcpu.c~
src/.deps/: dcpu.Po
src/debugger/: debugger.c  debugger.h  parser.c  parser.c~  parser.h~
